<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:text="@string/title"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="60sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="10dp" >

        <Button
            android:id="@+id/button_single"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:background="@drawable/button_state"
            android:shadowColor="#A8A8A8"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="15"
            android:text="@string/button_single"
            android:textColor="#FFFFFF"
            android:textSize="30sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="10dp" >

        <Button
            android:id="@+id/button_double"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:background="@drawable/button_state"
            android:shadowColor="#A8A8A8"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="15"
            android:text="@string/button_double"
            android:textColor="#FFFFFF"
            android:textSize="30sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="10dp" >

        <Button
            android:id="@+id/button_brief"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:background="@drawable/button_state"
            android:shadowColor="#A8A8A8"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="15"
            android:text="@string/button_brief"
            android:textColor="#FFFFFF"
            android:textSize="30sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="10dp" >

        <Button
            android:id="@+id/button_author"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:background="@drawable/button_state"
            android:shadowColor="#A8A8A8"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="15"
            android:text="@string/button_author"
            android:textColor="#FFFFFF"
            android:textSize="30sp" />

    </LinearLayout>

</LinearLayout>